@@ -65,3 +65,4 @@
 - Remove code duplication
 - Updated `README.md`
 - Update Summary command to show the global settings
+- Added asyncio lock
